# os_lab_1

./: CMakeLists.txt  creator.cpp  creator.h  employee.h  main.cpp  reporter.cpp  reporter.h
include/: employee.h  employee_utils.h
src/: CMakeLists.txt  Creator.cpp  Reporter.cpp  main.cpp
tests/: CMakeLists.txt  test_employee.cpp
